# Synapse

./: .gitignore  Cargo.toml  LITERATURE_SURVEY.md  PLAN.md  README.md  rust-toolchain.toml
skills/research/: SKILL.md
src/: api.rs  config.rs  engine.rs  main.rs  mistral_engine.rs
src/pillars/: echo_drafter.rs  grammar_gate.rs  mod.rs  prefix_vault.rs  router.rs
