[package]
name = "synapse"
version = "0.0.1"
edition = "2021"
description = "Vertically-integrated local inference layer connecting NeuroSym-AI and N.O.R.A"
license = "MIT"
repository = "https://github.com/AaditPani-RVU/Synapse"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
bytes = "1"
chrono = { version = "0.4", features = ["clock"] }
# Inference backend. Requires nvidia-cuda-toolkit installed (nvcc 12.4 confirmed).
mistralrs = { version = "0.8", default-features = false, features = ["cuda"] }

[profile.release]
opt-level = 3
lto = "thin"
